# applifting-python-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  openapi.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  ci.yml  release.yml
examples/: async_usage.py  async_usage_aiohttp.py  basic_usage.py  cli_usage.sh  hooks_usage.py  sync_usage.py  sync_usage_requests.py
src/applifting_python_sdk/: __init__.py  cache.py  cli.py  client.py  constants.py  exceptions.py  hooks.py  models.py  transports.py
src/applifting_python_sdk/_generated/python_exercise_client/: __init__.py
src/applifting_python_sdk/_generated/python_exercise_client/api/default/: auth_api_v1_auth_post.py  get_offers_api_v1_products_product_id_offers_get.py  register_product_api_v1_products_register_post.py
src/applifting_python_sdk/_generated/python_exercise_client/models/: __init__.py  auth_response.py  offer_response.py  register_product_request.py  register_product_response.py
tests/: conftest.py  test_async_client.py  test_cache.py  test_cli.py  test_client.py  test_sync_client.py  test_token_management.py  test_transports.py
