[project]
name = "applifting-python-sdk"
version = "0.1.1"
description = "A Python SDK for the Applifting Offers microservice API."
readme = "README.md"
authors = [
    { name = "vsem-azamat", email = "almazbek1608@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "attrs>=23.2.0",
    "typer>=0.16.0",
]

[project.scripts]
applifting-sdk = "applifting_python_sdk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
src = ["src", "tests", "examples"]
exclude = [
    "src/applifting_python_sdk/_generated",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
packages = ["src/applifting_python_sdk", "tests", "examples"]
strict = true

[[tool.mypy.overrides]]
module = "applifting_python_sdk._generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "openapi-python-client>=0.25.2",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=4.0.0",
    "respx>=0.22.0",
    "ruff>=0.12.3",
    "pre-commit>=4.2.0",
]
